Add benchmarking options and some results