@@ -1,13 +1,11 @@
 # Wikimedia search
 
-A sample project to show some Clojure skills
+A sample project to show some Clojure skills and have a grasp about the Liberator performance dealing with a high volume of concurrent requets. 
 
 # Challenge
-Wikimedia publish article abstracts as XML at [http://dumps.wikimedia.org/enwiki](http://dumps.wikimedia.org/enwiki) The files are very large but there is a smaller one (23Mb) at [latest](http://dumps.wikimedia.org/enwiki/latest/enwiki-latest-abstract23.xml) you can use for the test.
+Wikimedia publish article abstracts as XML at [http://dumps.wikimedia.org/enwiki](http://dumps.wikimedia.org/enwiki) The files are very large but there is a smaller one (83Mb) at [latest](http://dumps.wikimedia.org/enwiki/latest/enwiki-latest-abstract23.xml) you can use for the test.
 
 Each file contains a number of abstracts structured as per the following example
-
-
 
 
 
@@ -83,14 +81,30 @@ With .jar
    	$ java -jar wikimediasearch-0.1.0-standalone.jar -f resources/small.xml
 
 
+* Options
+
+
+
+````
+INFO [wikimediasearch.util] - wiki cache
+ index REST API.
+
+Usage: wiki cache [options]. All the options are optional and take default values
+
+Options:
+  -f, --filename FILENAME      resources/enwiki-latest-abstract23.xml  XML input file
+  -t, --thread THREAD          4                                       How many threads to compute response from request, default to 4
+  -q, --queue-size QUEUE-SIZE  20000                                   Max requests queued waiting for thread pool to compute response before rejecting, 503(Service Unavailable) is returned to client if queue is full, default to 20K
+  -h, --help                                                           Displays this
+````
+
 ## Example request & response
 
 
-```
-n
-$ curl "http://localhost:8090/search?q=Kosmos"
 
-```
+	$ curl "http://localhost:8090/search?q=Kosmos"
+
+
 
 Response
 
@@ -107,18 +121,95 @@ Response
 
 ## Some performance test using AB or WRK
 
+Server running with
 
-* Using [ApacheBench](https://httpd.apache.org/docs/2.2/programs/ab.html). Included on Mac OS (nothing to install).  On Debian `sudo apt-get install apache2-utils`
+* Passing these JVM Command Line Arguments or un-comment `project.clj` lines accordingly if using lein
+
+`-Dfile.encoding=UTF-8 -Xms3G -Xmx3G -XX:+AggressiveOpts -XX:+UseCompressedOops -XX:+UnlockDiagnosticVMOptions -XX:+DebugNonSafepoints -XX:+UnlockCommercialFeatures -XX:+FlightRecorder -XX:+FlightRecorder -XX:StartFlightRecording=delay=60s,duration=60s,filename=myrecording2.jfr -Dclojure.compile.path=/Users/jaime/Github/wikimediasearch/target/classes -Dwikimediasearch.version=0.0.1-SNAPSHOT -Dclojure.debug=false`
+
+* Passing `-t 200` option and default `queue-size`
+
+
+Using [ApacheBench](https://httpd.apache.org/docs/2.2/programs/ab.html). Included on Mac OS (nothing to install).  On Debian `sudo apt-get install apache2-utils`
 
 ```
-    $ cd wrk
+    $ cd benchmark
     $ ./test_ab.sh
 ```
 
-* Using [wrk](https://github.com/wg/wrk). On Mac OS you can install it easily with `brew install wrk`. For Linux refer to the github repo
+
+
+###Typical output on my laptop (Mac i5 2,6GHz)
 
 ```
-	$ cd wrk   
+$ cd benchmark
+$ ./test_ab.sh                                                                                  [±master ●●]
+This is ApacheBench, Version 2.3 <$Revision: 1604373 $>
+Copyright 1996 Adam Twiss, Zeus Technology Ltd, http://www.zeustech.net/
+Licensed to The Apache Software Foundation, http://www.apache.org/
+
+Benchmarking localhost (be patient)
+Completed 10000 requests
+Completed 20000 requests
+Completed 30000 requests
+Completed 40000 requests
+Completed 50000 requests
+Completed 60000 requests
+Completed 70000 requests
+Completed 80000 requests
+Completed 90000 requests
+Completed 100000 requests
+Finished 100000 requests
+
+
+Server Software:        http-kit
+Server Hostname:        localhost
+Server Port:            8090
+
+Document Path:          /search?q=Kosmos
+Document Length:        1560 bytes
+
+Concurrency Level:      10
+Time taken for tests:   32.058 seconds
+Complete requests:      100000
+Failed requests:        0
+Keep-Alive requests:    100000
+Total transferred:      191400000 bytes
+HTML transferred:       156000000 bytes
+Requests per second:    3119.30 [#/sec] (mean)
+Time per request:       3.206 [ms] (mean)
+Time per request:       0.321 [ms] (mean, across all concurrent requests)
+Transfer rate:          5830.41 [Kbytes/sec] received
+
+Connection Times (ms)
+              min  mean[+/-sd] median   max
+Connect:        0    0   0.0      0       2
+Processing:     1    3   2.0      3      74
+Waiting:        0    3   2.0      3      74
+Total:          1    3   2.0      3      74
+
+Percentage of the requests served within a certain time (ms)
+  50%      3
+  66%      3
+  75%      4
+  80%      4
+  90%      5
+  95%      5
+  98%      7
+  99%      8
+ 100%     74 (longest request)
+
+```
+
+The performance looks good enough dealing with over 3000 request/second and having a quick look at the [flight record](./benchmark/flight_recording_18045Clojure42957.jfr) there aren't any obvious bottlenecks, we don't even need more than 1,8GB of RAM ![RAM](./benchmark/img/mem.png) . The *hottest* method takes 2.62% of the execution time and it's `java.lang.Thread.run` which suggest that the biggest task is the coordination of the threads rather than the internal logic. 
+![method](./benchmark/img/methods.png)
+
+
+
+* Alternatively you can observe similar results using [wrk](https://github.com/wg/wrk). On Mac OS you can install it easily with `brew install wrk`. For Linux refer to the github repo
+
+```
+	$ cd benchmark   
 	$ ./test_wrk.sh
 ```
 
